[presentation|cli_scripts] wip (work in progress)

--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -26,10 +26,10 @@
 						<h5>A story about</h5>
 						<ul>
 							<li>accounts / passwords / "<b>2nd</b> factor"</li>
-							<li>security</li>
+							<li>(account) security</li>
 							<li>system administration (unix/linux)</li>
-							<li>it's my story / timeline</li>
-							<li>circle back to yubikeys</li>
+<!--							<li>concepts: "otp" & "public-key cryptography" </li>-->
+							<li>circle back to yubikeys (and web security)</li>
 							<li>+- 20 minutes</li>
 						</ul>
 					</div>
@@ -50,18 +50,51 @@
 					<section>
 						<h4>slides navigation</h4>
 						<br />
-						<div>done with "arrow-keys"! &nbsp; :)</div>
+						<div>with "arrow-keys" 👨‍💻</div>
 						<br />
 						<hr />
 						<br />
-						<h4>git project</h4>
+						<h4>a git project</h4>
 						<div>(github)</div>
 						<ul>
 							<li>presentation</li>
-							<li><em>code</em> used</li>
+							<li><em>code</em> (or scripts) used</li>
+							<li>last slide contains links and/or resources</li>
 						</ul>
 					</section>
 				</section>
+
+				<section>
+					<h4>tell a story</h4>
+					<ul>
+						<li>some slides</li>
+						<li>hands-on, demo's</li>
+						<ul>
+							<li>terminal and unix command-line interface (aka shell)</li>
+							<li>browser</li>
+						</ul>
+						<li>after presentation, Q&A (ok?)</li>
+					</ul>
+					<br />
+					<br />
+					<hr />
+					<br />
+					<div>it's "my" (hi)story</div>
+
+					<aside class="notes">
+						<div></div>
+					</aside>
+
+				</section>
+
+				<section >
+					<h4>demo setup</h4>
+					<hr />
+					<ul>
+						<li></li>
+					</ul>
+				</section>
+
 
 				<section> &hellip; </section>
 
