[presentation|cli_scripts] wip V

--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -87,7 +87,7 @@
 						<hr />
 						<br />
 						<h4>it's a git project</h4>
-						<div>(github)</div>
+						<div><a href="https://github.com/tbh26/secondFactor_story">in github</a></div>
 						<ul>
 							<li>presentation</li>
 							<li><em>code</em> (and/or scripts)</li>
@@ -120,13 +120,16 @@
 					<section>
 						<h4>cli demo setup</h4>
 						<ul>
-							<li>client</li>
-							<li>server</li>
+							<li>client (os X)</li>
+							<li>server (debian 11)</li>
 							<li>yubikeys</li>
 						</ul>
 						<br />
 						<br />
 						<div>meet "the" setup</div>
+						<div>
+							<img src="./images/small-home-network.png" alt="network setup" width="400" height="300">
+						</div>
 					</section>
 
 				</section>
@@ -148,7 +151,7 @@
 					</ul>
 					<br />
 					<br />
-					<h6>first demo!</h6>
+					<h6>first demos!</h6>
 					<aside class="notes">
 						<div>telnet, tcpdump, show "flow"</div>
 						<div>rlogin / rsh and 'trust'</div>
@@ -213,6 +216,7 @@
 						<ul>
 							<li>QR (mobile) apps, (otp code)</li>
 							<li>icts HvA/UvA beheer vpn</li>
+							<li>familiar (I guess)</li>
 						</ul>
 					</section>
 
@@ -229,7 +233,7 @@
 				<section>
 
 					<section>
-						<h4>other track</h4>
+						<h4><i>other</i> &nbsp; track</h4>
 						<div>public-key cryptography</div>
 						<div><a href="https://en.wikipedia.org/wiki/Public-key_cryptography">wikipedia ?</a></div>
 						<br />
