[presentation|cli_scripts] wip XXXV

--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -120,7 +120,7 @@
 					<section>
 						<h4>cli demo setup</h4>
 						<ul>
-							<li>client (os X)</li>
+							<li>client (os X...)</li>
 							<li>server (debian 11)</li>
 							<li>yubikeys</li>
 						</ul>
@@ -276,11 +276,11 @@
 
 				<section>
 					<h4>browser & 2FA (fido)</h4>
-					<div>semi not work related</div>
-					<div>microsoft</div>
-					<div>google</div>
-					<div>github</div>
-					<div>gitlab?</div>
+					<div>semi work / private accounts - (NOT work)</div>
+					<div><a href="https://account.microsoft.com/account">microsoft</a></div>
+					<div><a href="https://myaccount.google.com/">google</a></div>
+					<div><a href="https://github.com/login">github</a></div>
+					<div><a href="https://gitlab.com/users/sign_in">gitlab</a></div>
 				</section>
 
 				<section>
@@ -302,6 +302,16 @@
 					<ul>
 						<li>active/azure directory</li>
 						<li>in webapp</li>
+						<li><em>our</em> <a href="https://gitlab.ic.uva.nl">gitlab</a></li>
+					</ul>
+				</section>
+
+				<section>
+					<h6>please experiment with the yubikey</h6>
+					<ul>
+						<li>try 2FA; both "otp" and "fido"</li>
+						<li>learning React, hope to build a "login"</li>
+						<li>maybe don't use "static password"... (or hide it)</li>
 					</ul>
 				</section>
 
