[presentation] wip XXXVII

--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -262,14 +262,17 @@
 				<section>
 					<h4>Yubikey manager</h4>
 					<br/>
+					<div>gui desktop app (linux, os X, windows)</div>
+					<br/>
 					<ul>
-						<li>gui desktop app (linux, os X, windows)</li>
+						<li>Yubi security key (blue, fido)</li>
+						<li>Yubikey 4, beheer VPN (OTP)</li>
+						<li>Yubikey 5, surfconext SecurID (OTP + fido)</li>
 					</ul>
-					<div>why "otp" and/or "public-key thing"</div>
 				</section>
 
 				<section>
-					<h4>browser & 2FA (fido)</h4>
+					<h4>browser & "public key"</h4>
 					<br />
 					<div>semi work / private accounts</div>
 					<br />
@@ -310,7 +313,7 @@
 					<h6>please experiment with the yubikey</h6>
 					<ul>
 						<li>try 2FA; both "otp" and "fido"</li>
-						<li>learning React, hope to build a "login"</li>
+						<li>learning React, hope to build a "fido login"</li>
 						<li>maybe don't use "static password"... (or hide it)</li>
 					</ul>
 				</section>
