[presentation] wip XXXVIII

--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -47,60 +47,19 @@
 					<h4>what / how</h4>
 					<h5>presentation + demos (<a href="https://github.com/tbh26/secondFactor_story">github</a>)</h5>
 					<ul>
-						<li>remote access (aka login) & security</li>
+						<li>remote access(aka login), (in)secure and history</li>
 						<li>password / Two-factor authentication (2FA)</li>
-						<li>2FA focus; "otp" & "public-key cryptography" </li>
+						<li>2FA focus; "OTP" & "public-key cryptography" </li>
 						<li>circle back to yubikeys (and usage)</li>
 						<li>+- 35 minutes  🤞</li>
 					</ul>
 				</section>
 
-				<!--
-				<section>
-					<h4>how</h4>
-					<hr />
-					<ul>
-						<li>presentation</li>
-						<li>some demo's (in between)</li>
-						<li>Q & A after presentation?</li>
-						<br />
-						<br />
-						<div>/* may the demo gods be with me */</div>
-					</ul>
-
-				</section>
-
-				<section data-transition="zoom">
-					<section>
-						<h4>the presentation</h4>
-						<br />
-						<div>some (hi)story</div>
-						<div>in browser "slide(s)" created with html and/or markdown</div>
-						<small>(created with reveal.js)</small>
-					</section>
-					<section>
-						<h4>slides navigation</h4>
-						<br />
-						<div>with "arrow-keys" 👨‍💻</div>
-						<br />
-						<hr />
-						<br />
-						<h4>it's a git project</h4>
-						<div><a href="https://github.com/tbh26/secondFactor_story">in github</a></div>
-						<ul>
-							<li>presentation</li>
-							<li><em>code</em> (and/or scripts)</li>
-							<li>links and/or resources</li>
-						</ul>
-					</section>
-				</section>
--->
-
 				<section>
 					<section>
 						<h4>demos</h4>
 						<ul>
-							<li>besides presentation, show stuff</li>
+							<li>besides presentation, show stuff (hands-on)</li>
 							<ol>
 								<li>cli / shell (unix)</li>
 								<ul>
@@ -122,7 +81,7 @@
 						<ul>
 							<li>client (os X...)</li>
 							<li>server (debian 11)</li>
-							<li>yubikeys (webcam)</li>
+							<li>yubikeys & webcam</li>
 							<li>program or browser</li>
 						</ul>
 						<br />
@@ -139,7 +98,7 @@
 					<h4>the beginning</h4>
 					<ul>
 						<li>eduction (before work)</li>
-						<li>remote access</li>
+						<li>remote access/login</li>
 						<ul>
 							<li>telnet & ftp, secure?</li>
 							<li>(berkley) "r" commands, unix-only<small>(rlogin, rsh & rcp, trust?)</small></li>
@@ -155,17 +114,28 @@
 				</section>
 
 				<section>
+					<h4>telnet dead?</h4>
+					<div>cert mail 2013</div>
+					<div>
+						<img src="./images/Screenshot%20from%202022-02-16%2000-03-16.png" alt="screenshot cert mail headers" width="1000" height="450"/>
+					</div>
+				</section>
+
+				<section>
 					<h4>work</h4>
 					<ul>
 						<li>Informatiseringcentrum UvA (dec 1995)</li>
 						<ul>
 							<li>remote access</li>
-							<li>better security, how?</li>
-							<li>need for more; one time passwords (otp)?</li>
-							<li>predecessor, OTP on paper solution <small>(not well received)</small></li>
+							<li>better security needed, how?</li>
+							<li>let's go with: One Time Passwords == OTP</li>
+							<li>some effort with; "OTP on paper" solution <small>(not well received)</small></li>
 							<li>commercial solution for OTP</li>
 						</ul>
 					</ul>
+					<div>
+						<img src="./images/paperOTP.png" alt="One Time Password on paper" width="600" height="300">
+					</div>
 				</section>
 
 				<section>
@@ -210,14 +180,6 @@
 						</ul>
 					</section>
 
-				</section>
-
-				<section>
-					<h4>telnet dead?</h4>
-					<div>cert mail 2013</div>
-					<div>
-						<img src="./images/Screenshot%20from%202022-02-16%2000-03-16.png" alt="screenshot cert mail headers" width="1000" height="450"/>
-					</div>
 				</section>
 
 				<section>
