--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -117,7 +117,7 @@
 					<h4>telnet dead?</h4>
 					<div>cert mail 2013</div>
 					<div>
-						<img src="./images/Screenshot%20from%202022-02-16%2000-03-16.png" alt="screenshot cert mail headers" width="1000" height="450"/>
+						<img src="./images/some_mailbox_overview.png" alt="screenshot cert mail headers" width="1000" height="450"/>
 					</div>
 				</section>
 
