[presentation|cli_scripts] wip XXXXIII

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div>
         <ul>
             <li>
-                <a href="./presentation/">presentation</a>
+                <a href="http://localhost:8000">presentation via localhost:8000</a><span>...</span>
             </li>
             <li>
                 <a href="https://github.com/tbh26/secondFactor_story">github &quot;git&quot; repo</a>
