[presentation|cli_scripts] wip XXXXIV

--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
     <div>
         <ul>
             <li>
-                <a href="http://localhost:8000">presentation via localhost:8000</a><span>...</span>
+                <span>presentation via </span><a href="http://localhost:8000">localhost port 8000</a><span>...</span>
             </li>
             <li>
                 <a href="https://github.com/tbh26/secondFactor_story">github &quot;git&quot; repo</a>
             </li>
+            <br>
+            <span>broken presentation with </span><a href="./presentation/">github</a><span> pages</span>
         </ul>
     </div>
 </body>
