--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js presentation</title>
+		<title>2FA (reveal.js) presentation</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -31,8 +31,8 @@
 									<li>docs / wiki <a href="https://confluence.ic.uva.nl">confluence</a></li>
 									<li>workflow <a href="https://jira.ic.uva.nl">jira</a></li>
 								</ul>
-							<li>discussion</li>
-							<li>yubikey purchase</li>
+							<li>discussion <div><small>(maybe <b>do</b> something instead of complaining)</small></div></li>
+							<li>18 "yubikey 5" purchased</li>
 						</ul>
 					</div>
 					<h4>who</h4>
@@ -102,6 +102,7 @@
 						<ul>
 							<li>telnet & ftp, secure?</li>
 							<li>(berkley) "r" commands, unix-only<small>(rlogin, rsh & rcp, trust?)</small></li>
+							<li><small>client setup: <pre>$ brew install inetutils</pre></small></li>
 						</ul>
 					</ul>
 					<br />
