[presentation|cli_scripts] wip XXXXV

--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -31,7 +31,7 @@
 									<li>docs / wiki <a href="https://confluence.ic.uva.nl">confluence</a></li>
 									<li>workflow <a href="https://jira.ic.uva.nl">jira</a></li>
 								</ul>
-							<li>discussion <div><small>(maybe <b>do</b> something instead of complaining)</small></div></li>
+							<li>discussion <div><small>maybe; <b>do</b> something (instead of complaining)</small></div></li>
 							<li>18 "yubikey 5" purchased</li>
 						</ul>
 					</div>
@@ -48,9 +48,9 @@
 					<h5>presentation + demos (<a href="https://github.com/tbh26/secondFactor_story">github</a>)</h5>
 					<ul>
 						<li>remote access(aka login), (in)secure and history</li>
-						<li>password / Two-factor authentication (2FA)</li>
+						<li>Two-factor authentication (aka 2FA)</li>
 						<li>2FA focus; "OTP" & "public-key cryptography" </li>
-						<li>circle back to yubikeys (and usage)</li>
+						<li>circle back to yubikey 5 (and usage)</li>
 						<li>+- 35 minutes  🤞</li>
 					</ul>
 				</section>
@@ -107,13 +107,14 @@
 					</ul>
 					<br />
 					<br />
-					<h6>first demos (2x)</h6>
+					<h6>first demo</h6>
 					<aside class="notes">
-						<div>telnet, tcpdump, show "flow"</div>
+						<div>skip; telnet, tcpdump, show "flow"</div>
 						<div>rlogin / rsh / rcp and 'trust'</div>
 					</aside>
 				</section>
 
+				<!--
 				<section>
 					<h4>telnet dead?</h4>
 					<div>cert mail 2013</div>
@@ -121,9 +122,23 @@
 						<img src="./images/some_mailbox_overview.png" alt="screenshot cert mail headers" width="1000" height="450"/>
 					</div>
 				</section>
+				-->
 
 				<section>
-					<h4>work</h4>
+					<h4>2FA</h4>
+					<ul>
+						<li>something you <b>know</b> &amp; something you <b>have</b></li>
+						<li>OTP: password + extra</li>
+						<li>fido: security/private key</li>
+					</ul>
+					<br />
+					<br />
+					<div>Yubikey 5 can do <b>both</b></div>
+				</section>
+
+
+				<section>
+					<h4>work / OTP</h4>
 					<ul>
 						<li>Informatiseringcentrum UvA (dec 1995)</li>
 						<ul>
@@ -158,6 +173,7 @@
 						</div>
 					</section>
 
+					<!--
 					<section>
 						<h6>ftp</h6>
 						<br />
@@ -171,6 +187,7 @@
 						</ul>
 						<div><small>labor intensive</small></div>
 					</section>
+					-->
 
 					<section>
 						<h6>no "otp" demo</h6>
@@ -273,13 +290,15 @@
 				</section>
 
 				<section>
-					<h6>please experiment with the yubikey</h6>
+					<h4>take a way; yubikey 5</h4>
+					<h6>(please experiment with the yubikey)</h6>
 					<ul>
 						<li>try 2FA; both "otp" and "fido"</li>
 						<li>learning React, hope to build a "fido login"</li>
 						<li>maybe don't use "static password"... (or hide it)</li>
 					</ul>
 				</section>
+
 
 				<section>
 					<h6>sources / links</h6>
@@ -288,7 +307,7 @@
 				</section>
 
 				<section>
-					<div>end, thanks!</div>
+					<div>end; thank you!</div>
 					<br />
 					<br />
 					<div>Question?</div>
