[presentation|cli_scripts] wip XXXXVII

--- a/revealJs_presentation/index.html
+++ b/revealJs_presentation/index.html
@@ -63,13 +63,13 @@
 				</section>
 
 				<section>
-					<h4>what / how</h4>
+					<h4>what (or how)</h4>
 					<h5>presentation + demos (<a href="https://github.com/tbh26/secondFactor_story">github</a>)</h5>
 					<ul>
 						<li>remote access(aka login) &amp; some history</li>
 						<li>Two-factor authentication (aka 2FA)</li>
 						<li>2FA focus; "OTP" & "public-key cryptography" </li>
-						<li>circle back to yubikey 5 (and usage)</li>
+						<li>circle back to yubikey 5 and usage</li>
 						<li>+- 35 minutes  🤞</li>
 					</ul>
 				</section>
@@ -98,7 +98,7 @@
 					<section>
 						<h4>demo setup</h4>
 						<ul>
-							<li>client (os X...)</li>
+							<li>client (os X)</li>
 							<li>server (debian 11)</li>
 							<li>yubikeys & webcam</li>
 							<li>program or browser</li>
